# ObsidiRAG

./: .env.example  README.md  pyproject.toml
data/: obsidirag.db
src/: config.py  main.py
src/core/indexing/: api.py  index.py
src/core/monitor/: api.py  handler.py  manager.py
src/databases/: database.py
src/databases/file/: crud.py
src/databases/file/models/: file_status.py  file_status_enum.py
src/databases/schemas/: file_status.py
src/ui/: streamlit_app.py
