[project]
name = "obsidirag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "lancedb>=0.4.0",
    "openai>=1.0.0",
    "pyarrow>=14.0.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "tiktoken>=0.5.0",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
]
